# ossans_navi

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: .gitignore  compose.yaml  devcontainer.default.json
.github/workflows/: build.yaml
assets/: manifest.json  manifest_dev.json
ossans_navi/: __init__.py  app.py  assets.py  config.py  load_tiktoken.py
ossans_navi/common/: async_utils.py  cache.py  logger.py  string_util.py  utils.py
ossans_navi/controller/: config_controller.py
ossans_navi/service/: ai_prompt_assets.py  ai_prompt_service.py  ai_service.py  ai_tokenize_service.py  ossans_navi_service.py  slack_service.py  slack_wrapper.py
ossans_navi/type/: ai_type.py  ossans_navi_type.py  ossans_navi_types.py  slack_type.py
tests/: assets_tests.py
tests/common/: async_utils_tests.py  cache_tests.py
tests/service/: ai_prompt_service_tests.py  ai_service_test.py  slack_service_tests.py
tests/type/: slack_messages_sample.py  slack_type_tests.py
